--- a/management/templates/management/courses.html
+++ b/management/templates/management/courses.html
@@ -26,11 +26,36 @@
         this.coordinator = "";
         this.info = "";
       },
+
+      imports: [{ name: "", slug: "" }],
+      sendSubject() {
+        const values = (nl) =>
+          Array.from(nl)
+            .map((i) => i.value)
+            .filter((s) => s != "");
+
+        const csrfToken = document.cookie.slice(
+          document.cookie.indexOf("=") + 1
+        );
+
+        const form = document.getElementById("importSubjects");
+        const names = values(form.querySelectorAll(".input :nth-child(1)"));
+        const slugs = values(form.querySelectorAll(".input :nth-child(2)"));
+
+        fetch("{% url 'import_subject' %}", {
+          method: "POST",
+          headers: { "X-CSRFToken": csrfToken },
+          body: JSON.stringify({ names, slugs }),
+        })
+          .then((res) => res.text())
+          .then(() => location.reload())
+          .catch(console.error);
+      },
     }));
   });
 </script>
 {% endblock %} {% block content %}
-<main class="flex flex-col px-24 py-10" x-data="dialogs">
+<main class="flex flex-col gap-5 px-24 py-10" x-data="dialogs">
   <dialog :open="courseDialog" class="w-1/2 rounded-2xl p-6 shadow-lg">
     <form action="{% url 'courses' %}" method="POST">
       {% csrf_token %}
@@ -109,11 +134,11 @@
       <h2 class="text-xl font-bold">Nova matéria</h2>
       <div class="field">
         <label for="txt-name">Nome</label>
-        <input type="text" name="name" id="txt-name" required />
+        <input type="text" name="name" id="txt-name" required maxlength="60" />
       </div>
       <div class="field">
         <label for="txt-slug">Código</label>
-        <input type="text" name="slug" id="txt-slug" required />
+        <input type="text" name="slug" id="txt-slug" required maxlength="5" />
       </div>
       <div class="field">
         <label for="txt-desc">Descrição</label>
@@ -140,47 +165,43 @@
     </form>
   </dialog>
   <dialog :open="importDialog" class="rounded-lg shadow-lg">
-    <form
-      action="{% url 'create_subject' %}"
-      method="post"
-      enctype="multipart/form-data"
-    >
+    <form id="importSubjects" action="{% url 'create_subject' %}" method="post">
       {% csrf_token %}
       <h2 class="text-xl font-bold">Importar matérias</h2>
-      <input type="hidden" name="import" />
-      <label
-        for="file-subj"
-        class="btn flex w-max cursor-pointer items-center gap-1"
-      >
-        <span>Selecionar arquivo</span>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="2.2"
-          stroke="currentColor"
-          class="h-5 w-5"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M9 8.25H7.5a2.25 2.25 0 00-2.25 2.25v9a2.25 2.25 0 002.25 2.25h9a2.25 2.25 0 002.25-2.25v-9a2.25 2.25 0 00-2.25-2.25H15m0-3l-3-3m0 0l-3 3m3-3V15"
+      <template x-for="i in imports">
+        <div class="input mt-2 flex gap-2">
+          <input
+            type="text"
+            name=""
+            id=""
+            size="25"
+            maxlength="60"
+            placeholder="Nome"
           />
-        </svg>
-      </label>
-      <input
-        type="file"
-        name="import_file"
-        id="file-subj"
-        accept=".xls,.xlsx,.csv"
-        @input="readFile"
-        hidden
-      />
+          <input
+            type="text"
+            name=""
+            id=""
+            size="5"
+            maxlength="5"
+            placeholder="Código"
+          />
+        </div>
+      </template>
+      <input type="hidden" name="import" />
       <div class="mt-3 flex gap-2">
+        <button
+          @click.prevent="imports.push({ name: '', slug: '' })"
+          class="btn"
+        >
+          +
+        </button>
         <button @click.prevent="importDialog = false" class="btn">
           Voltar
         </button>
-        <button type="submit" class="btn">Criar</button>
+        <button type="submit" class="btn" @click.prevent="sendSubject()">
+          Criar
+        </button>
       </div>
     </form>
   </dialog>
@@ -224,31 +245,44 @@
       </button>
     </form>
   </dialog>
-  <header class="mb-4 flex justify-between">
-    <h1 class="mb-4 text-4xl font-semibold">Cursos</h1>
-    <div class="flex gap-2">
-      <button @click="clear()">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="h-8 w-8"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z"
-          />
-        </svg>
-      </button>
-      <button class="btn" @click="subjectDialog = true">
-        Adicionar matérias
-      </button>
-    </div>
-  </header>
   <section class="flex flex-col gap-6">
+    <header class="flex justify-between">
+      <h1 class="mb-4 text-4xl font-semibold">Cursos</h1>
+      <div class="flex gap-2">
+        <button @click="clear()">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="h-7 w-7"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z"
+            />
+          </svg>
+        </button>
+        <button @click="filterDialog = true">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="h-7 w-7"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M10.5 6h9.75M10.5 6a1.5 1.5 0 11-3 0m3 0a1.5 1.5 0 10-3 0M3.75 6H7.5m3 12h9.75m-9.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-3.75 0H7.5m9-6h3.75m-3.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-9.75 0h9.75"
+            />
+          </svg>
+        </button>
+      </div>
+    </header>
     {% if courses %} {% for course in courses %}
     <div
       class="rounded-2xl bg-gray-100 shadow"
@@ -295,7 +329,7 @@
           </button>
           <div
             x-show="options"
-            class="absolute flex flex-col gap-2 rounded-lg border border-slate-400 bg-gray-100 p-3"
+            class="absolute z-10 flex flex-col gap-2 rounded-lg border border-slate-400 bg-gray-100 p-3"
             @click.away="() => options = false"
           >
             <button
@@ -327,18 +361,69 @@
         class="origin-top rounded-b-2xl bg-gray-200 p-5 transition-all"
         :class="details || 'scale-y-0 h-0 py-0'"
       >
-        <p>
-          Duração: {{ course.duration }} ano{% if course.duration != 1 %}s{% endif %}
-        </p>
-        <p>Coordenador: {{ course.coordinator }}</p>
+        <p>Duração: {{ course.duration }} anos</p>
+        <p>Coordenador: {{ course.coordinator }} ({{ course.coordinator.pk }})</p>
         <p>Informações: {{ course.info }}</p>
       </div>
     </div>
     {% endfor %} {% else %}
-    <h2 class="font-mono text-2xl font-medium text-slate-500">
+    <span class="font-mono text-2xl font-medium text-slate-500">
       Nenhum curso encontrado :(
-    </h2>
+    </span>
     {% endif %}
+  </section>
+  <section>
+    <header class="mb-2 flex justify-between">
+      <h2 class="mb-4 text-4xl font-semibold">Matérias</h2>
+      <div class="flex gap-2">
+        <button @click="subjectDialog = true">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="h-7 w-7"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z"
+            />
+          </svg>
+        </button>
+        <button @click="importDialog = true">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="h-7 w-7"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5m-13.5-9L12 3m0 0l4.5 4.5M12 3v13.5"
+            />
+          </svg>
+        </button>
+      </div>
+    </header>
+    <div class="flex gap-2">
+      {% if subjects %} {% for subject in subjects %}
+      <span
+        class="rounded border border-slate-400 bg-gray-100 px-3 py-2 font-mono"
+        title="{{ subject.name }}"
+      >
+        {{ subject.slug }}
+      </span>
+      {% endfor %} {% else %}
+      <span class="font-mono text-2xl font-medium text-slate-500">
+        Nenhuma matéria encontrada :(
+      </span>
+      {% endif %}
+    </div>
   </section>
 </main>
 {% endblock %}
