Fixed messages again

--- a/core/templates/core/messages.html
+++ b/core/templates/core/messages.html
@@ -5,7 +5,7 @@
     x-data="closed: false"
     class="relative mb-1 rounded-lg border-2 border-lime-500 bg-slate-200 p-4 pr-6 shadow-md"
   >
-    <span>{{ msg }} {{ msg.level_tag }}</span>
+    <span>{{ msg }}</span>
     <button @click="closed = false" class="absolute right-2 top-2">
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -28,7 +28,7 @@
     x-data="closed: false"
     class="relative mb-1 rounded-lg border-2 border-red-500 bg-slate-200 p-4 pr-6 shadow-md"
   >
-    <span>{{ msg }} {{ msg.level_tag }}</span>
+    <span>{{ msg }}</span>
     <button @click="closed = false" class="absolute right-2 top-2">
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -51,7 +51,7 @@
     x-data="closed: false"
     class="relative mb-1 rounded-lg border-2 border-yellow-500 bg-slate-200 p-4 pr-6 shadow-md"
   >
-    <span>{{ msg }} {{ msg.level_tag }}</span>
+    <span>{{ msg }}</span>
     <button @click="closed = false" class="absolute right-2 top-2">
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -74,7 +74,7 @@
     x-data="closed: false"
     class="relative mb-1 rounded-lg border-2 border-indigo-400 bg-slate-200 p-4 pr-6 shadow-md"
   >
-    <span>{{ msg }} {{ msg.level_tag }}</span>
+    <span>{{ msg }}</span>
     <button @click="closed = false" class="absolute right-2 top-2">
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -97,7 +97,7 @@
     x-data="closed: false"
     class="relative mb-1 rounded-lg border-2 border-slate-500 bg-slate-200 p-4 pr-6 shadow-md"
   >
-    <span>{{ msg }} {{ msg.level_tag }}</span>
+    <span>{{ msg }}</span>
     <button @click="closed = false" class="absolute right-2 top-2">
       <svg
         xmlns="http://www.w3.org/2000/svg"
