--- a/core/templates/core/password/password_reset_confirm.html
+++ b/core/templates/core/password/password_reset_confirm.html
@@ -2,15 +2,13 @@
 <html>
 <head>
     <title>Solicitar Redefinição de Senha</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100">
     <div class="container mx-auto p-8">
         <h1 class="text-2xl font-semibold mb-4">Solicitar Redefinição de Senha</h1>
         <form method="post" class="space-y-4">
             {% csrf_token %}
-            <label for="email" class="block">E-mail:</label>
-            <input type="email" id="email" name="email" required class="w-full px-4 py-2 border rounded">
+            {{form}}
             <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Enviar</button>
         </form>
     </div>
