--- a/core/templates/core/password/password_reset_form.html
+++ b/core/templates/core/password/password_reset_form.html
@@ -8,8 +8,7 @@
         <h1 class="text-2xl font-semibold mb-4">Solicitar Redefinição de Senha</h1>
         <form method="post" class="space-y-4">
             {% csrf_token %}
-            <label for="email" class="block">E-mail:</label>
-            <input type="email" id="email" name="email" required class="w-full px-4 py-2 border rounded">
+            {{form}}
             <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Enviar</button>
         </form>
     </div>
