--- a/management/templates/management/classrooms.html
+++ b/management/templates/management/classrooms.html
@@ -140,7 +140,7 @@
       x-data="{ options: false, details: false }"
     >
       <h2 class="font-semibold text-xl mb-1 flex justify-between">
-        <span>{{ classroom.course.slug }}{{ classroom.year }}</span>
+        <span>{{ classroom }}</span>
         <button @click="options = !options">
           <svg
             xmlns="http://www.w3.org/2000/svg"
