--- a/core/templates/core/messages.html
+++ b/core/templates/core/messages.html
@@ -2,11 +2,11 @@
 <ul class="absolute left-9 top-9 z-10 sm:left-14 sm:top-14">
   {% for msg in messages %} {% if msg.level_tag == 'success' %}
   <li
-    x-data="{ closed: false }"
+    x-data="{ closed: false }" x-show="!closed"
     class="relative mb-1 rounded-lg border-2 border-lime-500 bg-slate-200 p-4 pr-6 shadow-md"
   >
     <span>{{ msg }}</span>
-    <button @click="closed = false" class="absolute right-2 top-2">
+    <button @click="closed = true" class="absolute right-2 top-2">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
@@ -25,11 +25,11 @@
   </li>
   {% elif msg.level_tag == 'error' %}
   <li
-    x-data="{ closed: false }"
+    x-data="{ closed: false }" x-show="!closed"
     class="relative mb-1 rounded-lg border-2 border-red-500 bg-slate-200 p-4 pr-6 shadow-md"
   >
     <span>{{ msg }}</span>
-    <button @click="closed = false" class="absolute right-2 top-2">
+    <button @click="closed = true" class="absolute right-2 top-2">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
@@ -48,11 +48,11 @@
   </li>
   {% elif msg.level_tag == 'warning' %}
   <li
-    x-data="{ closed: false }"
+    x-data="{ closed: false }" x-show="!closed"
     class="relative mb-1 rounded-lg border-2 border-yellow-500 bg-slate-200 p-4 pr-6 shadow-md"
   >
     <span>{{ msg }}</span>
-    <button @click="closed = false" class="absolute right-2 top-2">
+    <button @click="closed = true" class="absolute right-2 top-2">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
@@ -71,11 +71,11 @@
   </li>
   {% elif msg.level_tag == 'debug' %}
   <li
-    x-data="{ closed: false }"
+    x-data="{ closed: false }" x-show="!closed"
     class="relative mb-1 rounded-lg border-2 border-indigo-400 bg-slate-200 p-4 pr-6 shadow-md"
   >
     <span>{{ msg }}</span>
-    <button @click="closed = false" class="absolute right-2 top-2">
+    <button @click="closed = true" class="absolute right-2 top-2">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
@@ -94,11 +94,11 @@
   </li>
   {% else %}
   <li
-    x-data="{ closed: false }"
+    x-data="{ closed: false }" x-show="!closed"
     class="relative mb-1 rounded-lg border-2 border-slate-500 bg-slate-200 p-4 pr-6 shadow-md"
   >
     <span>{{ msg }}</span>
-    <button @click="closed = false" class="absolute right-2 top-2">
+    <button @click="closed = true" class="absolute right-2 top-2">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
