Added secret button on login

--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -29,10 +29,14 @@
   <section
     class="relative h-full w-full justify-between rounded-3xl bg-slate-100 shadow-md shadow-slate-800 sm:flex"
   >
+    <a
+      href="{% url 'secret' %}"
+      class="absolute right-3 top-3 rounded-full border-2 p-2 hover:border-color-secondary"
+    ></a>
     <form
       action="{% url 'login' %}"
       method="POST"
-      class="flex flex-col items-center justify-center px-8 py-9 sm:w-1/2 sm:pt-10 md:p-14"
+      class="flex flex-col items-center justify-center px-8 py-9 md:p-14 sm:w-1/2 sm:pt-10"
     >
       {% csrf_token %}
       <header class="mb-6 flex flex-col items-center gap-4">
@@ -67,7 +71,9 @@
         </div>
 
         <div class="flex w-full flex-col gap-3 md:block md:gap-2">
-          <a href="{% url 'password_reset' %}" class="text-sky-700">Esqueci a senha</a>
+          <a href="{% url 'password_reset' %}" class="text-sky-700">
+            Esqueci a senha
+          </a>
           <br class="hidden md:block" />
           <input
             type="submit"
