--- a/management/templates/management/courses.html
+++ b/management/templates/management/courses.html
@@ -533,7 +533,7 @@
         class="rounded border border-slate-400 bg-gray-100 px-3 py-2 font-mono"
         title="{{ subject.name }}"
       >
-        {{ subject.slug }}
+        {{ subject }}
       </span>
       {% endfor %} {% else %}
       <span class="font-mono text-2xl font-medium text-slate-500">
