--- a/management/templates/management/classrooms.html
+++ b/management/templates/management/classrooms.html
@@ -21,29 +21,22 @@
 </script>
 {% endblock %} {% block content %}
 <main class="flex flex-col gap-5 px-24 py-10" x-data="dialogs">
-  <dialog :open="classroomDialog" class="rounded-lg shadow-lg p-4 z-10">
+  <dialog :open="classroomDialog" class="z-10 rounded-lg p-4 shadow-lg">
     <form action="{% url 'classrooms' %}" method="POST">
       {% csrf_token %}
       <input type="hidden" name="pk" x-model="pk" />
       <h2 class="mb-3 text-xl font-semibold">Criar turma</h2>
       <div class="input mt-2 flex gap-2">
-        <input
-          type="text"
-          name="course"
-          id="txt-course"
-          size="5"
-          maxlength="5"
-          placeholder="Curso"
-          x-model="course"
-          required
-        />
+        <select name="course" id="sl-course" required>
+          {% for course in courses %}
+          <option value="{{ course.pk }}">{{ course.slug }}</option>
+          {% endfor %}
+        </select>
         <input
           type="number"
           name="year"
           id="txt-year"
           size="6"
-          max="2100"
-          placeholder="Ano"
           x-model="year"
           required
         />
@@ -96,7 +89,7 @@
       </button>
     </form>
   </dialog>
-  <header class="flex justify-between mb-4">
+  <header class="mb-4 flex justify-between">
     <h1 class="mb-4 text-4xl font-semibold">Turmas</h1>
     <div class="flex gap-2">
       <button @click="clear()">
@@ -136,10 +129,10 @@
   <section class="grid grid-cols-3 gap-6">
     {% if classrooms %} {% for classroom in classrooms %}
     <div
-      class="rounded-2xl bg-gray-100 shadow p-4 flex gap-1 flex-col relative"
+      class="relative flex flex-col gap-1 rounded-2xl bg-gray-100 p-4 shadow"
       x-data="{ options: false, details: false }"
     >
-      <h2 class="font-semibold text-xl mb-1 flex justify-between">
+      <h2 class="mb-1 flex justify-between text-xl font-semibold">
         <span>{{ classroom }}</span>
         <button @click="options = !options">
           <svg
@@ -160,10 +153,9 @@
       </h2>
       <span>Turno: {{ classroom.course.get_time_display }}</span>
       <span>
-        Coordenador: {{ classroom.course.coordinator }} ({{ classroom.course.coordinator.pk }})
+        Coordenador: {{ classroom.course.coordinator }}
+        ({{classroom.course.coordinator.pk }})
       </span>
-
-      
       <div
         x-show="options"
         class="absolute right-3 top-10 z-10 flex flex-col gap-2 rounded-lg border border-slate-400 bg-gray-100 p-3"
@@ -189,7 +181,7 @@
       </div>
     </div>
     {% endfor %} {% else %}
-    <span class="font-mono text-2xl font-medium text-slate-500">
+    <span class="w-max font-mono text-2xl font-medium text-slate-500">
       Nenhuma turma encontrada :(
     </span>
     {% endif %}
