--- a/management/templates/management/schedules.html
+++ b/management/templates/management/schedules.html
@@ -3,14 +3,19 @@
 {% block head %}
 <title>Horários</title>
 <link rel="stylesheet" href="{% static 'core/dist/css/schedule.css' %}">
+<script defer>
+  document.addEventListener("alpine:init", () => {
+    Alpine.data("timeTable", () => ({
+      time: "{{ classroom.course.time }}"
+    }));
+  })
+</script>
 {% endblock %}
 {% block content %}
 <main class="p-10">
-  <span x-text="'{{ classroom.course.time }}'"></span>
-  <span>{{ classroom.course.get_time_display }}</span>
-  <h1 class="mb-4 text-4xl font-semibold">Horários</h1>
+  <h1 class="mb-4 text-4xl font-semibold">Horários - {{ classroom }}</h1>
   <article>
-    <table class="table-fixed p-10 bg-slate-300">
+    <table class="table-fixed p-10 bg-slate-300" x-data="timeTable">
       <thead class="bg-transparent">
         <tr>
           <th></th>
@@ -22,54 +27,16 @@
         </tr>
       </thead>
       <tbody>
+        {% for t in time_table %}
         <tr>
-          <td>13:00</td>
+          <td>{{ t }}</td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
           <td></td>
         </tr>
-        <tr>
-          <td>13:50</td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>14:40</td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>15:50</td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>16:40</td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>17:30</td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
+        {% endfor %}
       </tbody>
     </table>
   </article>
